# gravity

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.txt  planets.toml
cmake/: compiler_warnings.cmake  general.cmake
include/: cli.hpp  common.hpp  config.hpp  context.hpp  gfx.hpp  input.hpp  io.hpp  keyboard.hpp  simulation.hpp  simulation_params.hpp
src/: cli.cpp  common.cpp  config.cpp  gfx.cpp  input.cpp  io.cpp  main.cpp  simulation.cpp
